--- a/formulario.css
+++ b/formulario.css
@@ -13,7 +13,7 @@ body{
  max-width: 450px;
  height: auto;
  background-color: #EFEFEF;
- margin: 5% auto;
+ margin: 2% ;
  padding-bottom: 1rem;
 }
 .form_top {
