ultimo ajusto a la pagTiarticulos

--- a/estilotablas.css
+++ b/estilotablas.css
@@ -11,6 +11,7 @@ th, td{
 	border: solid 1px black;
 	padding: 10px;
 }
+
 thead{
 	background-color:  orange;
 	color: white;
@@ -23,6 +24,6 @@ tr:nth-child(even){
 	background-color: #ddd;
 }
 tr:hover td{
-	background-color: #4C9ED9;
+	background-color: #EB8437;
 	color: white;
 }
