--- a/css/misEstilos.css
+++ b/css/misEstilos.css
@@ -1,7 +1,7 @@
 body {
   margin: 0;
   padding: 0;
-  background: url(../imagenesMue/sala3.jpg) no-repeat center top;
+  background: url(../imagenesIBQ/bio3.jpg) no-repeat center top;
   background-size: cover;
   font-family: sans-serif;
   height: 100vh;
